Patient navigation using shortcuts does not work correctly #629